implement POW button

--- a/SimpleCalc/app/src/main/res/values/strings.xml
+++ b/SimpleCalc/app/src/main/res/values/strings.xml
@@ -37,6 +37,9 @@
     <!-- Button label for mul operation -->
     <string name="mul_operation_text">Mul</string>
 
+    <!-- Button label for power operation -->
+    <string name="power_operation_text">POW</string>
+
     <!-- Message for textview in case of errors  -->
     <string name="computationError">Error</string>
 
